--- a/README
+++ b/README
@@ -21,6 +21,41 @@ converters, viewers, diff tools, etc.
 
 Changelog
 ---------
+12-01-11 through 01-24-12
+	A large amount of work has continued on the core I/O classes (stream impls)
+	to help make them not only faster and more robust, but also more helpful.
+	When errors are encountered in the streams, they are reported along with the
+	stream positions. This is critical for debugging problems with corrupt 
+	formats.
+	
+	Also provided ByteArray I/O stream classes that have the potential to provide
+	HUGE performance boosts for high frequency systems.
+	
+	Both these classes (ByteArrayInputStream and ByteArrayOutputStream) are
+	reusable and when wrapped by a UBJInputStream or UBJOutputStream, the top
+	level UBJ streams implicitly become reusable as well.
+	
+	Reusing the streams not only saves on object creation/GC cleanup but also
+	allows the caller to re-use the temporary byte[] used to translate to and
+	from the UBJ format, avoiding object churn entirely!
+	
+	This optimized design was chosen to be intentionally performant when combined
+	with NIO implementations as the ByteBuffer's can be used to wrap() existing
+	outbound buffers (avoiding the most expensive part of a buffer) or use
+	array() to get access to the underlying buffer that needs to be written to
+	the stream.
+	
+	In the case of direct ByteBuffers, there is no additional overhead added
+	because the calls to get or put are required anyway to pull or push the values
+	from the native memory location.
+	
+	This approach allows the fastest implementation of Universal Binary JSON
+	I/O possible in the JVM whether you are using the standard IO (stream) 
+	classes or the NIO (ByteBuffer) classes in the JDK.
+	
+	Some ancillary work on UBJ-based command line utilities (viewers, converters,
+	etc.) has begun as well.
+
 11-28-11
 	* Fixed UBJInputStreamParser implementation; nextType correctly implements
 	logic to skip existing element (if called back to back) as well as validate
